Add project specifig exludes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+##############################################################################
+# Project
+##############################################################################
+
+settings.json
+sites.json
+
+wg/
+
+
+##############################################################################
+# Python
+##############################################################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
